# com.autodesk.fbx

./: .gitignore  .gitlab-ci.yml  .gitmodules  Build.bee.cs  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Doxyfile  Doxyfile.in  LICENSE.md  README.md  Third Party Notices.md  appcollector.yaml  build.cmd  build.py  build.sh  build_linux.sh  build_mac.sh  build_win.cmd  pvp_xray_exemptions.json  windows_codesign_list.txt
.github/: CODEOWNERS
.yamato/: build-fbx-sdk-bindings.yml  code-signing.yml  global.metafile  promotion.yml  upload-fbxsdk-to-stevedore.yml  upm-ci.yml  yamato.yml  zip-fbxsdk.py
.yamato/wrench/: api-validation-jobs.yml  package-pack-jobs.yml  preview-a-p-v.yml  promotion-jobs.yml  publish-trigger.yml  recipe-regeneration.yml  validation-jobs.yml  wrench_config.json
Source/: WeakPointerHandle.cxx  equality.i  fbxanimcurve.i  fbxanimcurvebase.i  fbxanimevaluator.i  fbxanimlayer.i  fbxaxissystem.i  fbxbindingtable.i  fbxblendshape.i  fbxcamera.i  fbxclassid.i  fbxcollection.i  fbxdeformer.i  fbxdocumentinfo.i  fbxemitter.i  fbxgeometrybase.i  fbxglobalsettings.i  fbxio.i  fbxiobase.i  fbxiosettings.i  fbxlayer.i  fbxline.i  fbxmath.i  fbxmesh.i  fbxnode.i  fbxnurbscurve.i  fbxobject.i  fbxprogress.i  fbxproperty.i  fbxpropertytypes.i  fbxquaternion.i  fbxscene.i  fbxsdk.i  fbxskeleton.i  fbxskin.i  fbxstatus.i  fbxstring.i  fbxsubdeformer.i  fbxsystemunit.i  fbxtransforms.i  (+2 more)
TestProjects/FbxSDK/Assets/: Empty Scene.unity
TestProjects/FbxSDK/Assets/SampleFiles/: rig-max.controller  rig-maya.controller  rig-maya.fbx
TestProjects/FbxSDK/Assets/VisualComparison/: MiniFbxImporter.cs  VisualComparison.unity
TestProjects/FbxSDK/ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
Tools/CI/: .gitignore  FbxSdk-recipes.sln  FbxSdk.Cookbook.csproj  Program.cs  regenerate.bat  regenerate.sh
Tools/CI/Properties/: launchSettings.json
Tools/CI/Recipes/: BuildFbxSdkBindings.cs  CodeSigning.cs
Tools/CI/Recipes/Extensions/: JobBuilderExtensions.cs
Tools/CI/Settings/: FbxSdkSettings.cs
cmake/: FindCSharpCompiler.cmake  FindFBXSDK.cmake  Stevedore.cmake  UseFixHeaders.cmake
com.autodesk.fbx/: ValidationExceptions.json  package.json
com.autodesk.fbx/Editor/Scripts/: PostProcessAddToBuild.cs
docs/: DEBUG_LICENSE.txt  README.md  README.txt  RELEASE_NOTES.md  VERSION.txt  developer.md  porting_classes.md
examples/export/Assets/: ExportMethod.cs  ExportSettings.cs
examples/export/Assets/Components/: FbxSdkExporter.cs
examples/export/Assets/Editor/: FbxExporter01.cs  (+18 more)
examples/runtime/: HOWTO-useThisExample.txt
examples/runtime/Assets/: WriteFBXonEvent.cs  ballsOnAPlane.unity  emptySceneFromRuntime.fbx
examples/runtime/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
proto.com.autodesk.fbx/: README.md  ValidationExceptions.json  com.autodesk.fbx.asmdef  package.json  package.json.in
proto.com.autodesk.fbx.testing/: package.json
proto.com.autodesk.fbx.testing/Editor/PerformanceTests/: Autodesk.Fbx.PerformanceTest.asmdef  PerformanceTest.cs
proto.com.autodesk.fbx.tests/: package.json
proto.com.autodesk.fbx.tests/Tests/Editor/: Autodesk.Fbx.Editor.Tests.asmdef
proto.com.autodesk.fbx/Documentation~/: com.autodesk.fbx.md  com.autodesk.fbx.md.in  index.md
proto.com.autodesk.fbx/Editor/Scripts/: PostProcessAddToBuild.cs
proto.com.autodesk.fbx/Runtime/: Autodesk.Fbx.asmdef
proto.com.autodesk.fbx/Tests/Editor/: Autodesk.Fbx.Editor.Tests.asmdef  Autodesk.Fbx.Tests.asmdef  PlaceholderTest.cs  PlaceholderTests.asmdef
proto.com.autodesk.fbx/Tests/Mono.Reflection/: Mono.Reflection.asmdef
proto.com.autodesk.fbx/Tests/Runtime/: Autodesk.Fbx.Tests.asmdef  FbxExporterTest.cs
proto.com.autodesk.fbx/Tests/VisualComparison/: FbxSharpIOSettings.cs  VisualComparison.asmdef
scripts/: add-runtime-define.py  discover-datatypes.py  discover-immutables.py  discover-weakpointerhandles.py  file-search-replace.py  fix-headers.py  generate-downcast-table.py  il2cpp-fix-swighelpers.py  replace-dllimport.py
scripts/Properties/: AssemblyInfo.cs
spike/: CMakeLists.txt  FbxSharp.cs  build_cppsharp.sh  build_swig.sh  fbxsdk.i
spike-obj-lifetime/: CMakeLists.txt  file.fbx  test-free.cpp
spike/FBXSDKCppSharp/: FBXSDKCppSharp.sln  FBXSDKCppSharp.userprefs
spike/FBXSDKCppSharp/FbxSdk/: FbxSdk.csproj  project.json  project.lock.json
spike/FBXSDKCppSharp/FbxSdk/Properties/: AssemblyInfo.cs
spike/FBXSDKCppSharp/HelloWorldApp/: HelloWorldApp.csproj  Program.cs
spike/FBXSDKCppSharp/HelloWorldApp/Properties/: AssemblyInfo.cs
spike/cmake/: FindFBXSDK.cmake
spike/lib/Release_x64/: libCLI.Native.dylib  libCSharp.Native.dylib  libCommon.Native.dylib  libEncodings.Native.dylib  libNamespacesBase.Native.dylib  libNamespacesDerived.Native.dylib  libStandardLib.Native.dylib  libTypeMaps.Native.dylib  libVTables.Native.dylib
src/: FbxSharpObjectLifetime.i  FbxSharpProgressCallback.h  WeakPointerHandle.cxx  discover-weakpointerhandles.py  equality.i  fbxanimcurve.i  fbxanimcurvebase.i  fbxanimcurvefilter.i  fbxanimcurvenode.i  fbxanimlayer.i  fbxanimstack.i  fbxaxissystem.i  fbxbindingtable.i  fbxblendshape.i  fbxblendshapechannel.i  fbxcamera.i  fbxclassid.i  fbxcluster.i  fbxcollection.i  fbxconnectionpoint.i  fbxconstraint.i  fbxdatatypes.i  fbxdeformer.i  fbxdocument.i  fbxdocumentinfo.i  fbxemitter.i  fbxexporter.i  fbxgeometry.i  fbxgeometrybase.i  fbxglobalsettings.i  fbximplementation.i  fbximporter.i  fbxio.i  fbxiobase.i  fbxiopluginregistry.i  fbxiosettings.i  fbxlayer.i  fbxlayercontainer.i  fbxlight.i  fbxmanager.i  (+30 more)
src/optimized/: FbxDoubleTemplates.cs  FbxDoubleTemplates.h
tests/NativePerformance/: PerformanceBenchmarks.cpp
tests/RuntimeTests/Mono.Reflection/: Mono.Reflection.asmdef
tests/RuntimeTests/SampleFiles/: rig-max.fbx
tests/RuntimeTests/VisualComparison/: MiniFbxImporter.cs
tests/UnityEditorDependancy/: UnityDependancyTest.cs  UnityDependancyTest.exe.config
tests/UnityTests/ProjectSettings/: ProjectSettings.asset
tests/Vectors/: Vectors.cpp
tests/Yamato/: check_coverage_percent.py
(+229 files in other folders)
